--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 					<div class="column6content">
 						<div class='arrowheader'><div class="arrow2"><span class="material-symbols-outlined">arrow_forward_ios</span></div><h2>Where we are now </h2></div>
 						<div class="column6-text">
-							<p>Being held every year, we are now at our 13th Edition. Over the years we have welcomed more and more artists, changed to bigger locations, and other editions were made with larger works, always in a square format. Come and join us with your paintings, drawings, prints, or just come and pay us a visit in our 2023 Edition</p>
+							<p>Being held every year, we are now at our 13th Edition. Over the years we have welcomed more and more artists, changed to bigger locations, and other editions were made with larger works, always in a square format. Come and join us with your paintings, drawings, prints, or just come and pay us a visit in our 2024 Edition.</p>
 						</div>
 					</div>
 				</div>	
